--- a/em70_fetal/deploy/config.cfg
+++ b/em70_fetal/deploy/config.cfg
@@ -2,6 +2,7 @@ __dir="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 __file="${__dir}/$(basename "${BASH_SOURCE[0]}")"
 __base="$(basename ${__file} .sh)"
 __os="Linux"
+__user_home_dir="$(cd ~ && pwd)"
 if [[ "${OSTYPE:-}" == "darwin"* ]]; then
   __os="OSX"
 fi
@@ -10,15 +11,12 @@ fi
 C_PROXY_URI='';
 C_PROXY_STRING="proxy=${C_PROXY_URI}";
 
-
-C_GIT_USER='git1';
+C_GIT_USER='git';
 C_GIT_URI='git.em70.ru:fetal';
 C_GIT_DIR_NAME='fetal';
-C_GIT_CLONE_DIR="${__dir}/${C_GIT_DIR_NAME}";
+C_GIT_CLONE_DIR="$(cd ~ && pwd)/${C_GIT_DIR_NAME}";
 C_GIT_CLONE_STRING="${C_GIT_USER}@${C_GIT_URI}";
-
-C_GIT_APP_DIR_NAME='app';
-C_GIT_APP_DIR="${C_GIT_CLONE_DIR}/${C_GIT_APP_DIR_NAME}";
+C_GIT_REVISION_FILE="${__user_home_dir}/fetal_revision.txt";
 
 C_DB_USER_ADMIN='elecard';
 C_DB_USER_PASSWORD='cnjk120cv';
@@ -26,16 +24,15 @@ C_DB_HOST_URI='localhost';
 C_DB_DB_NAME='fetalmon';
 C_DB_POSTGRES_USER_PASSWORD='postgres';
 
-echo ${C_GIT_APP_DIR};
 
-C_GIT_WEB_DIR_NAME="web";
-C_GIT_WEB_DIR="${C_GIT_APP_DIR}/${C_GIT_WEB_DIR_NAME}";
+C_GIT_SPA_DIR="${C_GIT_CLONE_DIR}/app/web/spa/proto";
+C_SPA_DEPLOY_DIR='/var/www/html';
+C_GIT_API_DIR="${C_GIT_CLONE_DIR}/app/web/api/proto";
 
-C_GIT_SPA_DIR_NAME="spa/proto";
-C_GIT_SPA_DIR="${C_GIT_WEB_DIR}/${C_GIT_SPA_DIR_NAME}";
+C_API_DEPLOY_DIR='/var/www/html/api/v1';
+C_API_FRAMEWORK_DIR='/var/www/api_framework';
 
-C_SPA_DEPLOY_DIR="/var/www/html/spa";
-C_GIT_SPA_DIST_DIR="${C_GIT_SPA_DIR}/dist";
+C_GIT_MIGRATION_TOOL_DIR="${C_GIT_CLONE_DIR}"'/db/tools/em/migration';
 
 
 LOG_LEVEL=7;
