--- a/em70_fetal/deploy/config.cfg
+++ b/em70_fetal/deploy/config.cfg
@@ -7,8 +7,8 @@ if [[ "${OSTYPE:-}" == "darwin"* ]]; then
   __os="OSX"
 fi
 
-#C_PROXY_URI='http://proxy:6666';
-C_PROXY_URI='';
+C_PROXY_URI='http://proxy:6666';
+#C_PROXY_URI='';
 C_PROXY_STRING="proxy=${C_PROXY_URI}";
 
 C_GIT_USER='git';
@@ -33,6 +33,10 @@ C_API_DEPLOY_DIR='/var/www/html/api/v1';
 C_API_FRAMEWORK_DIR='/var/www/api_framework';
 
 C_GIT_MIGRATION_TOOL_DIR="${C_GIT_CLONE_DIR}"'/db/tools/em/migration';
+
+
+C_USER_GROUP='fetal';
+C_DEPLOY_USER='deploy';
 
 
 LOG_LEVEL=7;
