--- a/em70_fetal/deploy/config.cfg
+++ b/em70_fetal/deploy/config.cfg
@@ -35,8 +35,9 @@ C_API_FRAMEWORK_DIR='/var/www/api_framework';
 C_GIT_MIGRATION_TOOL_DIR="${C_GIT_CLONE_DIR}"'/db/tools/em/migration';
 
 
-C_USER_GROUP='fetal';
+C_DEPLOY_USER_GROUP='fetal';
 C_DEPLOY_USER='deploy';
+C_DEPLOY_USER_PASSWD='deploy';
 
 
 LOG_LEVEL=7;
