--- a/em70_fetal/deploy/config.cfg
+++ b/em70_fetal/deploy/config.cfg
@@ -39,6 +39,8 @@ C_DEPLOY_USER_GROUP='fetal';
 C_DEPLOY_USER='deploy';
 C_DEPLOY_USER_PASSWD='deploy';
 
+C_SPA_DEPLOY_URL='/';
+
 
 LOG_LEVEL=7;
 NO_COLOR=0;
