--- a/em70_fetal/deploy/config.cfg
+++ b/em70_fetal/deploy/config.cfg
@@ -23,6 +23,8 @@ C_DB_USER_PASSWORD='cnjk120cv';
 C_DB_HOST_URI='localhost';
 C_DB_DB_NAME='fetalmon';
 C_DB_POSTGRES_USER_PASSWORD='postgres';
+C_DB_USER_DEPLOY=${C_DB_USER_ADMIN};
+C_DB_USER_DEPLOY_PASSWORD=${C_DB_USER_PASSWORD};
 
 
 C_GIT_SPA_DIR="${C_GIT_CLONE_DIR}/app/web/spa/proto";
@@ -33,6 +35,10 @@ C_API_DEPLOY_DIR='/var/www/html/api/v1';
 C_API_FRAMEWORK_DIR='/var/www/api_framework';
 
 C_GIT_MIGRATION_TOOL_DIR="${C_GIT_CLONE_DIR}"'/db/tools/em/migration';
+C_MIGRATION_TOOL_CONFIG_DIR="${C_GIT_MIGRATION_TOOL_DIR}/config";
+C_MIGRATION_TOOL_CONFIG_DB_DEPLOY_FILE="${C_MIGRATION_TOOL_CONFIG_DIR}/dbDeploy.php";
+C_MIGRATION_TOOL_CONFIG_DB_FILE="${C_MIGRATION_TOOL_CONFIG_DIR}/db.php";
+
 
 
 C_DEPLOY_USER_GROUP='fetal';
