--- a/em70_fetal/deploy/config.cfg
+++ b/em70_fetal/deploy/config.cfg
@@ -7,8 +7,8 @@ if [[ "${OSTYPE:-}" == "darwin"* ]]; then
   __os="OSX"
 fi
 
-C_PROXY_URI='http://proxy:6666';
-#C_PROXY_URI='';
+#C_PROXY_URI='http://proxy:6666';
+C_PROXY_URI='';
 C_PROXY_STRING="proxy=${C_PROXY_URI}";
 
 C_GIT_USER='git';
