--- a/em70_fetal/deploy/config.cfg
+++ b/em70_fetal/deploy/config.cfg
@@ -17,6 +17,7 @@ C_GIT_DIR_NAME='fetal';
 C_GIT_CLONE_DIR="$(cd ~ && pwd)/${C_GIT_DIR_NAME}";
 C_GIT_CLONE_STRING="${C_GIT_USER}@${C_GIT_URI}";
 C_GIT_REVISION_FILE="${__user_home_dir}/fetal_revision.txt";
+C_GIT_DB_DEPLOY_INIT_FILES_DIR="${C_GIT_CLONE_DIR}/db/init";
 
 C_DB_USER_ADMIN='elecard';
 C_DB_USER_PASSWORD='cnjk120cv';
@@ -35,8 +36,10 @@ C_API_DEPLOY_DIR='/var/www/html/api/v1';
 C_API_FRAMEWORK_DIR='/var/www/api_framework';
 
 C_GIT_MIGRATION_TOOL_DIR="${C_GIT_CLONE_DIR}"'/db/tools/em/migration';
+C_GIT_APPLY_MIGRATION_DIR="${C_GIT_CLONE_DIR}/db/migrations"
 C_MIGRATION_TOOL_CONFIG_DIR="${C_GIT_MIGRATION_TOOL_DIR}/config";
-C_MIGRATION_TOOL_CONFIG_DB_DEPLOY_FILE="${C_MIGRATION_TOOL_CONFIG_DIR}/dbDeploy.php";
+C_MIGRATION_TOOL_CONFIG_DB_DEPLOY_FILE_NAME='dbDeploy.php';
+C_MIGRATION_TOOL_CONFIG_DB_DEPLOY_FILE="${C_MIGRATION_TOOL_CONFIG_DIR}/${C_MIGRATION_TOOL_CONFIG_DB_DEPLOY_FILE_NAME}";
 C_MIGRATION_TOOL_CONFIG_DB_FILE="${C_MIGRATION_TOOL_CONFIG_DIR}/db.php";
 
 
